# practice_BQ

./: .gitignore  README.md  config.py  create_table.py  csv_to_bucket.py  pyproject.toml
